[gd_scene load_steps=11 format=2]

[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterSelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/SelectionPanel.gd" type="Script" id=2]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/ListSetupSplitter.gd" type="Script" id=3]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterListScroll.gd" type="Script" id=4]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/CharacterList/CharacterList.tscn" type="PackedScene" id=5]
[ext_resource path="res://CharacterSelection/CharacterSelectionScreen/ControlInfos.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="Theme" id=2]
PanelContainer/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.0627451, 0.0352941, 1 )

[sub_resource type="Theme" id=4]
PanelContainer/styles/panel = SubResource( 3 )

[node name="CharacterSelectionScreen" type="VBoxContainer"]
margin_right = 640.0
margin_bottom = 720.0
rect_min_size = Vector2( 640, 720 )
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="SelectionPanel" type="PanelContainer" parent="."]
margin_right = 640.0
margin_bottom = 656.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="ListSetupSplitter" type="HBoxContainer" parent="SelectionPanel"]
margin_right = 640.0
margin_bottom = 656.0
rect_min_size = Vector2( 640, 656 )
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="CharacterListScroll" type="ScrollContainer" parent="SelectionPanel/ListSetupSplitter"]
margin_right = 64.0
margin_bottom = 656.0
rect_min_size = Vector2( 64, 656 )
scroll_horizontal_enabled = false
script = ExtResource( 4 )

[node name="CharacterList" parent="SelectionPanel/ListSetupSplitter/CharacterListScroll" instance=ExtResource( 5 )]
margin_bottom = 656.0
rect_min_size = Vector2( 64, 656 )
custom_constants/separation = 0

[node name="ControlInfosPanel" type="PanelContainer" parent="."]
margin_top = 656.0
margin_right = 640.0
margin_bottom = 720.0
theme = SubResource( 4 )

[node name="ControlInfos" type="HBoxContainer" parent="ControlInfosPanel"]
margin_right = 640.0
margin_bottom = 64.0
rect_min_size = Vector2( 640, 64 )
custom_constants/separation = 4
alignment = 1
script = ExtResource( 6 )
